# micifuz

./: WORKSPACE  maven.bzl  pom.xml
.github/workflows/: ci.yml  daily.yaml
backend/authn/: BUILD.bazel
backend/authn/src/main/java/com/micifuz/authn/: MainVerticle.java
backend/authn/src/test/java/com/micifuz/authn/: SimpleTest.java
backend/petshop/: BUILD.bazel  pom.xml
backend/petshop/src/main/java/com/micifuz/petshop/: PetShopMainVerticle.java
backend/petshop/src/main/java/com/micifuz/petshop/handlers/: RedisBasicHandler.java
backend/petshop/src/main/java/com/micifuz/petshop/ioc/: IoC.java
backend/petshop/src/main/java/com/micifuz/petshop/redis/: RedisClient.java
backend/petshop/src/main/java/com/micifuz/petshop/router/: Routing.java
backend/petshop/src/test/java/com/micifuz/petshop/: SimpleTest.java
backend/shelters/: BUILD.bazel
backend/shelters/src/test/java/com/micifuz/shelters/: SimpleTest.java
backend/vets/: BUILD.bazel
backend/vets/src/test/java/com/micifuz/vets/: SimpleTest.java
